--- a/IdentitySample/Views/_ViewImports.cshtml
+++ b/IdentitySample/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using IdentitySample
 @using IdentitySample.Models
 @using IdentitySample.Models.Authentication
+@addTagHelper IdentitySample.CustomTagHelpers.*,IdentitySample
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
